@@ -26,7 +26,8 @@ add to it).
 
   PC
 
-  
+added -pc_ilu_damping and -pc_lu_damping PCLUSetDamping(), ILU for handling singular
+or matrices that generate a zero pivot.  
  
   AO
 
